# crypto-api-misuse-detectors-go

./: .gitignore  README.md  Repo_Vuln_type_label.py  aggregated_results.json  compose.yaml  go.mod  go.sum  pyproject.toml  requirements.txt  run_experiments_batches.sh
.github/workflows/: lint.yml
cmd/analysis/: main.go
cmd/analyzer/: README.md  main.go
cmd/augment-ds/: main.go
cmd/compose/: main.go
cmd/cryptoanalysis/: main.go
cmd/gomodcollector/: main.go
cmd/modcollector/: main.go
cmd/vulncompose/: main.go
cmd/vulnrunner/: main.go
collect/: Dockerfile
data/: README.md  crypto_vulnerabilities.tagged_info.json  module_data_512.csv  modules_info.json  repository_original.csv  repository_with_versions.csv  tagged_vulnerabilties_conservative.json  tagged_vulnerabilties_liberal.json
data/archive/: README.md  cwe_distribution_broad.csv  cwe_distribution_conservative.csv  go_vulnerabilities.vulnerabilities_info.json  overview_cwes_dataset.txt
data/cwe/: cwes_conservative.csv  cwes_liberal.csv
data/dataset/: final_dataset.csv
data/examples/: encrypter.go  false-negatives.md  https.md
data/samples/: column_level_rule_findings_summary.json  (+2 more)
docker/: Dockerfile  README.md  compose.yaml
go-module-collector/: .gitignore  go.mod  go.sum
llm-dataset-collector/: Vuln_Dataset_Generator.py
scripts/: chown.sh  cleanup.sh  move_repo.sh  run_experiments_scheduler.sh  run_experiments_sequential.sh
slides/: manual_workshop_revision.tex  references.bib  svm-go-cryptoapi-slides.listing  svm-go-cryptoapi-slides.tex
src/: README.md  requirements.txt
(+4645 files in other folders)
