[project]
name = "go-cryptoapi-analysis"
version = "0.1.0"
description = "Security tool consensus analysis for Go cryptography API usage"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.5.0",
    "venn>=0.1.3",
]

[project.scripts]
analyze-results = "src.tool_consensus.main:main"

[tool.uv]
package = false
exclude-newer = "7 days"

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
